# eager

./: .gitignore  Pipfile  README.md  collect_predictions.py  combine_csv.py  main.py  pyproject.toml  sacred_main.py  split_dataset.py
analysis/: Statistics.ipynb
analysis/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
results/: framework_comparison_rich.csv  framework_comparison_shallow.csv  rich_datasets.csv  shallow_datasets.csv
src/: attribute_features.py  distance_measures.py  eager.py  experiment.py  prepared_models.py  run_configs.py  similarity_measures.py  write_results.py
src/analysis/: Measures_Types.ipynb  ShowResults.ipynb  Statistics.ipynb  TableCreation.ipynb  TypeAnalysis.ipynb  Untitled.ipynb  test.tex
src/dataset/: ScadsDataset.py  csv_dataset.py  dataset.py  openea_dataset.py  scads_dataset.py
src/embedding/: embedding.py  openea_runner.py  rdf2vec.py
src/knowledge_graph/: csv.py  from_csv.py  rdf_to_openea.py  read_openea.py
src/matching/: classifiers.py  eval.py  matcher.py  mlp.py  pair_to_vec.py  sklearn.py  torch.py  type_helper.py
src/quality/: analyze_types.py  create_quality_df.py  quality_measures.py
src/similarity/: booleansim.py  create_training.py  datedistance.py  measure_finding.py  numberdistance.py  sentence_bert.py  similarities.py
src/utils/: argument_parser.py  bert.py  collect_predictions.py  combine_csv.py  file_printer.py  write_results.py  (+1 more)
tests/: analyze_types_test.py  booleansim_test.py  create_training_test.py  datedistance_test.py  measure_finding_test.py  numberdistance_test.py  similarities_test.py
(+11 files in other folders)
